--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 
 <body>
     <section id="smoke-logo">
-        <video src="./video/sm_nbg2.mp4" autoplay muted></video>
+        <video src="./video/sm_nbg2.mp4" autoplay muted loop></video>
         <div class="logo-wrapper">
-            <p class="cannabar underline-from-center topline-from-center">
+            <p class="cannabar">
+                <span class="border"></span>
+                <span class="border"></span>
+                <span class="border"></span>
+                <span class="border"></span>
                 <span>C</span>
                 <span>A</span>
                 <span>N</span>
