border animation and font

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <span class="border"></span>
                 <span class="border"></span>
                 <span class="border"></span>
-                <span>C</span>
-                <span>A</span>
-                <span>N</span>
+                <span class="letter">C</span>
+                <span class="letter">A</span>
+                <span class="letter">N</span>
                 <br>
-                <span>N</span>
-                <span>A</span>
-                <span>
+                <span class="letter">N</span>
+                <span class="letter">A</span>
+                <span class="letter">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" width="440.137px" height="427.137px" viewBox="0 0 440.137 427.137"
                         enable-background="new 0 0 440.137 427.137" xml:space="preserve">
@@ -152,9 +152,9 @@
                     </svg>
                 </span>
                 <br>
-                <span>B</span>
-                <span>A</span>
-                <span>R</span>
+                <span class="letter">B</span>
+                <span class="letter">A</span>
+                <span class="letter">R</span>
             </p>
             <p class="coffeeshop">
                 <span>SWITZERLANDS</span>
